# graphql-to-avro

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: avro.rs  convert.rs  graphql.rs  lib.rs  main.rs
