[package]
name = "graphql-to-avro"
version = "0.0.1"
authors = ["Conor McManus <cnrmcmanus@gmail.com>"]
description = "CLI tool for converting GraphQL type definitions to Avro JSON schemas"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
graphql-parser = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
